<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.llegoati.llegoati.activities.ContactsActivity">
    <item
        android:id="@+id/action_add_contact_address"
        android:icon="@drawable/ic_add_black_24dp"
        android:orderInCategory="100"
        android:title="@string/menu_item_add_contact_address"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_contact_phone_movil"
        android:icon="@drawable/ic_check_black"
        android:orderInCategory="100"
        android:title="@string/menu_item_add_contact_phone_movil"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_contact_phone"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="100"
        android:title="@string/menu_item_add_contact_phone"
        app:showAsAction="never" />
</menu>
