<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/origin_10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rl_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/tv_province"
                android:textColor="@color/black" />

            <Switch
                android:id="@+id/sw_province"
                style="@style/Widget.AppCompat.CompoundButton.Switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <Spinner
            android:id="@+id/sp_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_province"
            android:layout_marginTop="@dimen/origin_16dp"
            android:background="@drawable/bkg_text_edit_dialog"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rl_artisan_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_artisan"
                android:textColor="@color/black"
                android:layout_alignBaseline="@+id/sw_artisan_name"
                android:layout_alignBottom="@+id/sw_artisan_name"
                android:layout_alignParentStart="true" />

            <Switch
                android:id="@+id/sw_artisan_name"
                style="@style/Widget.AppCompat.CompoundButton.Switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <Spinner
            android:id="@+id/sp_artisan_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_artisan_name"
            android:layout_marginTop="@dimen/origin_16dp"
            android:background="@drawable/bkg_text_edit_dialog"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rl_active_filter_messenger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/tv_active_filter_messenger"
                android:textColor="@color/black" />

            <Switch
                android:id="@+id/sw_active_filter_messenger"
                style="@style/Widget.AppCompat.CompoundButton.Switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_with_messenger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_active_filter_messenger"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_without_messenger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:text="@string/tv_without_messenger"
                android:textColor="@color/black" />

            <Switch
                android:id="@+id/sw_with_messenger"
                style="@style/Widget.AppCompat.CompoundButton.Switch"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_with_messenger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:text="@string/tv_with_messenger"
                android:textColor="@color/black" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>